# freshdesk_mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
docs/: README.md  agents.create.md  agents.get.md  agents.list.md  agents.search.md  agents.update.md  agents_create.md  agents_get.md  agents_list.md  agents_search.md  agents_update.md  canned.create.md  canned.folders.create.md  canned.folders.list.md  canned.folders.update.md  canned.get.md  canned.list.md  canned.update.md  canned_create.md  canned_folders_create.md  canned_folders_list.md  canned_folders_update.md  canned_get.md  canned_list.md  canned_update.md  common.md  companies.fields.md  companies.get.md  companies.list.md  companies.search.md  companies_fields.md  companies_get.md  companies_list.md  companies_search.md  contacts.fields.md  contacts.get.md  contacts.list.md  contacts.search.md  contacts.update.md  contacts_fields.md  (+64 more)
docs/source/: freshworks_support_ticket_rest_apis.html
src/freshdesk_mcp/: __init__.py  server.py
tests/: test-fd-mcp.py  test_company_functions.py  test_conversation_pagination.py  test_helpers_only.py
