[project]
name = "freshdesk-mcp"
version = "0.2.0-rc.1"
description = "An MCP server for Freshdesk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.3.0",
]

[[project.authors]]
name = "Gopi Krishnan"
email = "gopi@effy.co.in"

[build-system]
requires = [ "hatchling", "setuptools", "wheel"]
build-backend = "hatchling.build"

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"
