[project]
name = "freshdesk-mcp"
version = "2.0.0"
description = "An MCP server for Freshdesk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build~=1.3",
    "httpx~=0.28",
    "mcp[cli]~=1.14",
    "pydantic~=2.11",
]

authors = [
  { name = "Gopi Krishnan", email = "gopi@effy.co.in" },
  { name = "Maanaesh Swamy", email = "maanaesh.s@effy.co.in" },
  { name = "Scott Bisker", email = "scott@defiant.com" },
  { name = "Brian Curran", email = "brian@defiant.com" }
]

[build-system]
requires = [ "hatchling", "setuptools", "wheel"]
build-backend = "hatchling.build"

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"
